--- a/javascript/lab2/todoApp.html
+++ b/javascript/lab2/todoApp.html
@@ -15,7 +15,8 @@
         <input type="text" placeholder="Enter Your Task" id="task" class="form-control mt-3" />
         <button onclick="save()" class="btn btn-primary mt-3">Save Todo</button>
         <h2 class="mt-2 text-bg-secondary p-2">My todos</h2>
-        <ul id="data" class="mt-3 list-group"></ul>
+        <ul id="data" class="mt-3 list-group">
+        </ul>
     </div>
     <script>
         const todos = []; //my array is empty
